--- a/src/components/Cards/MonsterCard.module.css
+++ b/src/components/Cards/MonsterCard.module.css
@@ -72,11 +72,11 @@
 .Strengh {
     float: left;
     display: inline;
-    width: 25px;
-    height: 25px;
-    margin-top: 8px;
+    width: 23px;
+    height: 23px;
+    margin-top: 6px;
     margin-left: 2px;
-    background-image: url('');
+    background-image: url('/images/Strengh.png');
     background-size: cover;
 }
 
@@ -86,7 +86,7 @@
     height: 26px;
     margin-top: 6px;
     margin-right: 50px;
-    background-image: url('');
+    background-image: url('/images/Defense.png');
     background-size: cover;
 }
 
@@ -97,7 +97,7 @@
     height: 25px;
     margin-top: 7px;
     margin-left: -10px;
-    background-image: url('https://i.ya-webdesign.com/images/treasure-clipart-transparent-background-3.png');
+    background-image: url('/images/Treasure.png');
     background-size: cover;
     position: absolute;
 }
