--- a/src/components/GameOver/GameOver.module.css
+++ b/src/components/GameOver/GameOver.module.css
@@ -1,5 +1,5 @@
 .GameOver {   
-    height: 200px;
+    height: 400px;
     width: 400px;
     border: 5px solid black;
     border-radius: 5px;
@@ -18,6 +18,17 @@
     -ms-user-select: none; /* IE10+/Edge */
     user-select: none; /* Standard */
     margin:0 auto;
-    margin-top: 250px;;
+    margin-top: 150px;;
     text-align: center;
+}
+
+.Dead {
+    width: 80%;
+    margin: 0 auto;
+    height: 200px;
+    border: 2px solid black;
+    background-image: url('https://img3.goodfon.com/wallpaper/nbig/7/17/sai-man-killing-dirty-dark.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
