--- a/src/components/Cards/TreasureCard.module.css
+++ b/src/components/Cards/TreasureCard.module.css
@@ -7,6 +7,8 @@
 	border-radius: 5px;
 	background-image: url('https://i.pinimg.com/originals/8f/b0/7d/8fb07d1d8660048cc089a07047e7e77d.jpg');
 	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
 	text-align: center;
 	font-weight: 700;
 	position: relative;
