--- a/src/components/Cards/MonsterCard.module.css
+++ b/src/components/Cards/MonsterCard.module.css
@@ -7,7 +7,6 @@
 	border: 5px solid black;
 	border-radius: 5px;
 	background-color: black;
-	background-image: url('');
 	background-size: cover;
 	text-align: center;
 	margin:0 auto;
@@ -90,6 +89,10 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    border: 2px dashed black;
+}
+
+.Table td {
     border: 2px dashed black;
 }
 
