--- a/src/components/CharacterPanel/Panel/CharacterPanel.module.css
+++ b/src/components/CharacterPanel/Panel/CharacterPanel.module.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Berkshire+Swash&display=swap');
 
 .Panel {
-    height: 95%;
+    height: 96%;
     width: 100%%;
     border: 5px solid black;
     border-radius: 5px;
@@ -41,6 +41,7 @@
     border: 2px solid black;
     display: inline-block;
     border-radius: 5px;
+    margin-bottom: 10px;
 
 
 }
@@ -82,6 +83,8 @@
   width: 50%;
 
 }
+
+
 
 .LevelIcon {
   height: 25px;
@@ -159,10 +162,29 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.BossSlainIcon {
+  height: 25px;
+  width: 25px;
+  background-image: url('/images/BossSlain.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .AreaIcon {
   height: 25px;
   width: 25px;
   background-image: url('/images/Globe.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.AreaExploredIcon {
+  height: 25px;
+  width: 25px;
+  background-image: url('/images/areaExplored.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -240,4 +262,18 @@
   @keyframes expandWidth {
      0% { width: 0; }
     100% { width: auto; }
+  }
+
+  .InventoryTable {
+    width: 100%;
+    height: 310px;
+    border: 2px solid black;
+  }
+
+  .InventoryTable td {
+    border: 2px solid black;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 5px;
   }
