--- a/src/components/CharacterPanel/Panel/CharacterPanel.module.css
+++ b/src/components/CharacterPanel/Panel/CharacterPanel.module.css
@@ -268,6 +268,7 @@
     width: 100%;
     height: 310px;
     border: 2px solid black;
+    margin: 0 auto;
   }
 
   .InventoryTable td {
@@ -277,3 +278,19 @@
     background-position: center;
     padding: 5px;
   }
+
+.InventoryButtons {
+  width: 33%;
+}
+
+.attackCards td{
+  border: 2px solid darkred;
+}
+
+.defenseCards td{
+  border: 2px solid darkblue;
+}
+
+.magicCards td{
+  border: 2px solid darkgreen;
+}
