--- a/src/components/Cards/TreasureCard.module.css
+++ b/src/components/Cards/TreasureCard.module.css
@@ -23,6 +23,7 @@
 	-moz-user-select: none; /* Firefox */
 	-ms-user-select: none; /* IE10+/Edge */
 	user-select: none; /* Standard */
+	overflow: hidden;
 }
 .Card:hover {
 	cursor: pointer;
