--- a/src/components/Merchant/Merchant.module.css
+++ b/src/components/Merchant/Merchant.module.css
@@ -58,3 +58,14 @@
     display: inline-block;
 
 }
+
+.CloseBtn {
+    width: 50px;
+    height: 50px;
+    float: right;
+    color: red
+}
+
+.CloseBtn :hover {
+    cursor: pointer;
+}
