--- a/src/components/LevelUp/LevelUp.module.css
+++ b/src/components/LevelUp/LevelUp.module.css
@@ -28,3 +28,15 @@
     background-size: cover;
     background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRaoC8KsDSuHQ2kOzUCh_tu5rRAp7lfv1YXWSbA5Nmwo_puPq0V');
 }
+
+.Btn {
+    width: 20%;
+    margin-right: 40%;
+    margin-left: 40%;
+    display: inline-block;
+    box-shadow: 1px 2px #888888;
+}
+.Btn:hover {
+    cursor: pointer;
+    background-color:darkgrey;
+  }
