--- a/src/components/ChooseWorldScreen/ChooseWorldScreen.module.css
+++ b/src/components/ChooseWorldScreen/ChooseWorldScreen.module.css
@@ -1,6 +1,6 @@
 .Container {
 	font-weight: 800;
-	margin: 0 auto;
+	margin-left: 17%;
 	width: 80%;
 	-webkit-user-select: none; /* Safari */        
 	-moz-user-select: none; /* Firefox */
