--- a/src/components/ChooseWorldScreen/ChooseWorldScreen.module.css
+++ b/src/components/ChooseWorldScreen/ChooseWorldScreen.module.css
@@ -13,7 +13,7 @@
 	font-family: 'Righteous', cursive;
 	color:white;
 	text-shadow: 1px 1px 2px darkred, 0 0 1em darkred, 0 0 0.2em darkred;
-	width: 80%;
-	margin: 0 auto;
+	width: 60%;
+	margin-left: 12%;
 	text-align: center;
 }
