--- a/src/containers/BoardBuilder/BoardBuilder.module.css
+++ b/src/containers/BoardBuilder/BoardBuilder.module.css
@@ -1,7 +1,7 @@
 .Board {
 	height: 100%;
 	width: 100%;
-	background-image: url('https://wallup.net/wp-content/uploads/2015/12/99110-landscape-space.jpg');
+	background-image: url('https://wallpaperaccess.com/full/1314202.jpg');
 	background-size: cover;
 	display: flex;
 }
