--- a/src/components/Cards/ChampionCard.module.css
+++ b/src/components/Cards/ChampionCard.module.css
@@ -18,7 +18,13 @@
     -moz-box-shadow: .2em .2em .5em #333;
     -webkit-box-shadow: .2em .2em .5em #333;
     box-shadow: .2em .2em .5em #333;
+	
 }
+
+.CardDisabled {
+	filter: grayscale(100%);
+}
+
 .Card:hover {
 	cursor: pointer;
 	bottom: 2px;
